<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#C2EFEF"
    android:layout_height="match_parent"
    tools:context=".ui.Files.FilesFragment">

    <TextView
        android:id="@+id/text_Files"
        android:layout_width="264dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:background="#D5E3E3"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="Important Files"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/hyperlink"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/hyperlink2"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/hyperlink3"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/hyperlink4"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>